Fix footer
the footer was too short

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ header {
 footer {
 	clear: both;
     height: auto;
-	padding: 1em;
+	padding: 3em;
     text-align: center;
     background-color: red; 
 }
